renamed to cloneterest

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Clonetrest</title>
+        <title>Cloneterest</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
 
         <div  id="header_div">
-            <h1 id="title">C L O N E T R E S T</h1>
+            <h1 id="title">C L O N E T E R E S T</h1>
         </div>
 
         <div id="new-pin_div">
