--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Cloneterest</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-
-        <div  id="header_div">
+        <div id="header_div">
+            <div id="contact">
+                <a
+                    href="https://github.com/Seanhetzel/cloneterest"
+                    target="_blank"
+                >
+                    <img
+                        id="github_img"
+                        src="http://blogs.vmware.com/management/files/2019/04/25231.png"
+                        alt="GitHub"
+                    />
+                </a>
+                <p>
+                    Sean Hetzel
+                </p>
+                <p>
+                    <a href="mailto:seanhetzel1@gmail.com" target="_top"
+                        >seanhetzel1@gmail.com</a
+                    >
+                </p>
+            </div>
             <h1 id="title">C L O N E T E R E S T</h1>
         </div>
 
-        <div id="new-pin_div">
-            <h2>new post form</h1>
+        <div id="new_pin_div">
+            <h2>Add Post</h2>
         </div>
 
-        <div class="parent" id="pins_div">
+        <div class="parent" id="pins_div"></div>
 
-        </div>
-
-        <script src='index.js'></script>
-
+        <script src="index.js"></script>
     </body>
 </html>
