cleaned up and added comments

--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
             <h2>Add Post</h2>
         </div>
 
-        <div class="parent" id="pins_div">
-            <div class="grid-col grid-col--1"></div>
-            <div class="grid-col grid-col--2"></div>
-            <div class="grid-col grid-col--3"></div>
-            <div class="grid-col grid-col--4"></div>
-        </div>
+        <div class="parent" id="pins_div"></div>
 
         <script src="index.js"></script>
     </body>
