changed post to pin

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     
     <div id="new_pin_div">
-        <h2>Add Post</h2>
+        <h2>Add Pin</h2>
     </div>
     
     <div class="parent" id="pins_div"></div>
