removed unnessesary files and added favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
     <head>
         <meta charset="utf-8" />
         <title>Cloneterest</title>
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <link rel="stylesheet" href="./style.css" />
         <script src="index.js"></script>
     </head>
@@ -10,23 +28,22 @@
         <div id="header_div">
             <div id="contact">
                 <a
-                href="https://github.com/Seanhetzel/cloneterest"
-                target="_blank"
+                    href="https://github.com/Seanhetzel/cloneterest"
+                    target="_blank"
                 >
-                <img
-                id="github_img"
-                src="http://blogs.vmware.com/management/files/2019/04/25231.png"
-                alt="GitHub"
-                />
-            </a>
+                    <img
+                        id="github_img"
+                        src="http://blogs.vmware.com/management/files/2019/04/25231.png"
+                        alt="GitHub"
+                    />
+                </a>
+            </div>
+            <h1 id="title">C L O N E T E R E S T</h1>
         </div>
-        <h1 id="title">C L O N E T E R E S T</h1>
-    </div>
-    
-    <div id="new_pin_div">
-        <h2>Add Pin</h2>
-    </div>
-    <div class="parent" id="pins_div"></div>
-    
+
+        <div id="new_pin_div">
+            <h2>Add Pin</h2>
+        </div>
+        <div class="parent" id="pins_div"></div>
     </body>
 </html>
