changed github image to local

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 >
                     <img
                         id="github_img"
-                        src="http://blogs.vmware.com/management/files/2019/04/25231.png"
+                        src="./github_logo.png"
                         alt="GitHub"
                     />
                 </a>
