--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             sizes="16x16"
             href="favicon-16x16.png"
         />
+        <link rel="manifest" href="site.webmanifest">
         <link rel="stylesheet" href="./style.css" />
         <script src="index.js"></script>
     </head>
