--- a/index.html
+++ b/index.html
@@ -1,49 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8" />
-        <title>Cloneterest</title>
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="favicon-16x16.png"
-        />
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="stylesheet" href="./style.css" />
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <div id="header_div">
-            <div id="contact">
-                <a
-                    href="https://github.com/Seanhetzel/cloneterest"
-                    target="_blank"
-                >
-                    <img
-                        id="github_img"
-                        src="./github_logo.png"
-                        alt="GitHub"
-                    />
-                </a>
-            </div>
-            <h1 id="title">C L O N E T E R E S T</h1>
-        </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Idea board for sharing beautiful pins."
+    />
+    <meta
+      name="keywords"
+      content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
+    />
+    <title>C L O N E T E R E S T</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <div id="header_div">
+      <div id="contact">
+        <a href="https://github.com/Seanhetzel/cloneterest" target="_blank">
+          <img id="github_img" src="./github_logo.png" alt="GitHub" />
+        </a>
+      </div>
+      <h1 id="title">C L O N E T E R E S T</h1>
+    </div>
 
-        <div id="new_pin_div">
-            <h2>Add Pin</h2>
-        </div>
-        <div class="parent" id="pins_div"></div>
-    </body>
+    <div id="new_pin_div">
+      <h2>Add Pin</h2>
+    </div>
+    <div class="parent" id="pins_div"></div>
+  </body>
 </html>
