changed github logo color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header_div">
       <div id="contact">
         <a href="https://github.com/Seanhetzel/cloneterest" target="_blank">
-          <img id="github_img" src="./github_logo.png" alt="GitHub" />
+          <img id="github_img" src="./github-logo.png" alt="GitHub" />
         </a>
       </div>
       <h1 id="title">C L O N E T E R E S T</h1>
