added share image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="description"
       content="Idea board for sharing beautiful pins."
     />
+    <meta property=“og:image” content=“cloneterest-screenshot-2.PNG” />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
@@ -29,7 +30,7 @@
     </div>
 
     <div id="new_pin_div">
-      <h2>Add Pin</h2>
+      <h2>ADD PIN</h2>
     </div>
     <div class="parent" id="pins_div"></div>
   </body>
