--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta property=“og:image” content=“cloneterest-screenshot-2.PNG” />
+    <meta property=“image” content=“./cloneterest-screenshot-2.PNG” />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
