still tryna get image to work

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Idea board for sharing beautiful pins." />
+    <meta property="og:title" content="C L O N E T E R E S T" />
     <meta
-      name="description"
+      property="og:description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta property=“image” content=“./cloneterest-screenshot-2.PNG” />
+    <meta property=“og:image” content=“./cloneterest-screenshot-2.PNG” />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
