--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       property="og:description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta property=“og:image” content=“cloneterest-screenshot-2.PNG” />
+    <meta property=“og:image” content=“https://github.com/sean-hetzel/cloneterest/raw/master/cloneterest-screenshot-2.PNG” />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
