--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Idea board for sharing beautiful pins." />
-    <meta property="og:image" content="cloneterest-screenshot-2.PNG"/>
+    <meta name="od:title" content="Cloneterest" />
+    <meta
+      name="og:description"
+      content="Idea board for sharing beautiful pins."
+    />
+    <meta property="og:image" content="cloneterest-screenshot-3.png" />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
