--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="od:title" content="Cloneterest" />
+    <meta property="og:title" content="C L O N E T E R E S T" />
     <meta
-      name="og:description"
+      property="og:description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta property="og:image" content="cloneterest-screenshot-3.png" />
+    <meta property="og:image" content="./cloneterest-screenshot-3.png" />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
