--- a/index.html
+++ b/index.html
@@ -12,13 +12,33 @@
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
     />
+    <meta name="twitter:title" content="C L O N E T E R E S T" />
+    <meta
+      name="twitter:description"
+      content="Idea board for sharing beautiful pins."
+    />
+    <meta name="twitter:image" content="./cloneterest-screenshot-3.png" />
     <title>C L O N E T E R E S T</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <div id="header_div">
@@ -29,7 +49,6 @@
       </div>
       <h1 id="title">C L O N E T E R E S T</h1>
     </div>
-
     <div id="new_pin_div">
       <h2>ADD PIN</h2>
     </div>
