--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       property="og:description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta property="og:image" content="./cloneterest-screenshot-3.png" />
+    <meta
+      property="og:image"
+      content="https://github.com/sean-hetzel/cloneterest/raw/master/cloneterest-screenshot-3.png"
+    />
     <meta
       name="keywords"
       content="Pinterest, idea board, la, sean hetzel, flatiron school, california, arizona, future, dark theme, modern, mid-century"
@@ -17,7 +20,10 @@
       name="twitter:description"
       content="Idea board for sharing beautiful pins."
     />
-    <meta name="twitter:image" content="./cloneterest-screenshot-3.png" />
+    <meta
+      name="twitter:image"
+      content="https://github.com/sean-hetzel/cloneterest/raw/master/cloneterest-screenshot-3.png"
+    />
     <title>C L O N E T E R E S T</title>
     <link
       rel="apple-touch-icon"
