add description for google search

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="C L O N E T E R E S T" />
     <meta
+      name="description"
+      content="Idea board for sharing beautiful artwork."
+    />
+    <meta
       property="og:description"
-      content="Idea board for sharing beautiful pins."
+      content="Idea board for sharing beautiful artwork."
     />
     <meta
       property="og:image"
@@ -18,7 +22,7 @@
     <meta name="twitter:title" content="C L O N E T E R E S T" />
     <meta
       name="twitter:description"
-      content="Idea board for sharing beautiful pins."
+      content="Idea board for sharing beautiful artwork."
     />
     <meta
       name="twitter:image"
